--- a/src/global.scss
+++ b/src/global.scss
@@ -2,11 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
-    .nav-btn {
-        @apply px-2 text-blue-400;
-    }
-    .active {
-        @apply text-blue-400;
-    }
-}
+// .game {
+//     @layer components {
+//         .nav-btn {
+//             @apply px-2 text-blue-400;
+//         }
+//         .active {
+//             @apply text-blue-400;
+//         }
+//     }
+// }
