--- a/src/editor/global.scss
+++ b/src/editor/global.scss
@@ -2,13 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-// .game {
-//     @layer components {
-//         .nav-btn {
-//             @apply px-2 text-blue-400;
-//         }
-//         .active {
-//             @apply text-blue-400;
-//         }
-//     }
-// }
+@layer components {
+    .attr-left-title {
+        @apply flex-shrink-0 whitespace-nowrap w-1/3 min-w-[50px] capitalize;
+    }
+    .attr-input-r {
+        @apply outline-none w-full min-w-[40px] px-1 flex-1 h-6 cursor-row-resize rounded-md;
+    }
+}
